file upload and testing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>TheCodex</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <h1>Test</h1>
+    <form id="uploadFile">
+        <input type="file" id="uploadedFile">
+        <button type="submit">Upload</button> 
+    </form>
+
+    <script src="js/script.js"></script>
 </body>
+</html>
