attempted to style

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
 </head>
 
 <body>
-    <h1>Test</h1>
-    <form id="uploadFile">
-        <input type="file" id="uploadedFile">
-        <button type="submit">Upload</button> 
-    </form>
+    <div class="Content">
+        <h1>TheCodex</h1>
+        <form id="uploadFile">
+            <input type="file" id="uploadedFile">
+            <button type="submit">Upload</button> 
+        </form>
+        <h2 id="fileContents"></h2>
+    </div>
+    
 
     <script src="js/script.js"></script>
 </body>
