--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <body>
     <div class="Content">
         <h1>TheCodex</h1>
-        <form id="uploadFile">
-            <input type="file" id="uploadedFile">
-            <button type="submit">Upload</button> 
-        </form>
-        <h2 id="fileContents"></h2>
+        <input type="file" id="uploadedFile">
+        
+        <h2 class="fileContents"></h2>
     </div>
     
 
