Added inputting new entrys

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input type="file" id="fileUpload" accept="application/json">
             <br>
             <label for="masterPass">Enter your personal key:</label>
-            <input type="password" id="masterPass">
+            <input type="password" id="masterPass" value="b&!a5wxXAV95j16ex">
 
             <button type="submit">Unlock</button>
         </form>
@@ -34,7 +34,7 @@
         </table>
         <br>
 
-        <form id="newInput">
+        <form id="newPassword">
             <label for="addService">Enter Service:</label>
             <input type="text" id="addService">
             <br>
