--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </form>
 
         <br>
+        <button id="saveData">Save JSON</button>
+        <br><br>
         <table id="passwordTable">
             <thead>
                 <tr>Service</tr>
