added ability to create new vaults throught the application

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         
         <div id="exportButton">
-            <button id="saveData">Export Passwords</button>
+            <button id="saveData">Export & Logout</button>
             <br><br>
         </div>
         
