--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br><br>
             <label for="masterPass">Enter your personal key:</label>
             <br>
-            <input type="password" id="masterPass" value="b&!a5wxXAV95j16ex">
+            <input type="password" id="masterPass" value="">
 
             <button type="submit">Unlock</button>
             </form>
