added close button to add password form

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
 
         <div id="addNewPasswordForm">
+            <button id="closeAddNewPasswordForm">Close</button>
             <form id="newPassword">
                 <label for="addService">Enter Service:</label>
                 <input type="text" id="addService">
